module(
    name = "bazel_nondeterministic_actions",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "gazelle", version = "0.47.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.22.5")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//tools/execlog:go.mod")
use_repo(go_deps, "org_golang_google_protobuf")
