load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "execlog_lib",
    srcs = ["main.go"],
    importpath = "tools/execlog",
    visibility = ["//visibility:public"],
    deps = ["//tools/execlog/lib"],
)

go_binary(
    name = "parser",
    embed = [":execlog_lib"],
    visibility = ["//visibility:public"],
)
