load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "proto",
    srcs = ["spawn.pb.go"],
    importpath = "tools/execlog/proto",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
    ],
)
